Fix "Bookmark" card title spacing

--- a/packages/slate-editor/src/modules/editor-v4-web-bookmark/components/WebBookmarkElement/WebBookmarkElement.scss
+++ b/packages/slate-editor/src/modules/editor-v4-web-bookmark/components/WebBookmarkElement/WebBookmarkElement.scss
@@ -80,7 +80,7 @@
     &__title {
         font-weight: 800;
         line-height: 1.6;
-        margin: $spacing-base 0;
+        margin: 0 0 $spacing-base 0;
 
         color: $grey-700;
 
